[project]
name = "langgraph-based-multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "pillow>=12.2.0",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "torch>=2.12.0",
    "transformers>=5.12.0",
]
